bootstrap the catalog section

--- a/static-pages/category.html
+++ b/static-pages/category.html
@@ -124,79 +124,8 @@
                 <img src="img/slide4.jpg" alt="">
             </div>
           </div>
-          <div class="catalog__grid">
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/coffee.jpg" alt="">
-                <div class="catalog__grid-title">Чай, кофе, какао</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/milk.jpg" alt="">
-                <div class="catalog__grid-title">Молоко, сыр, яйцо</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/milk.jpg" alt="">
-                <div class="catalog__grid-title">Молоко, сыр, яйцо</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/milk.jpg" alt="">
-                <div class="catalog__grid-title">Молоко, сыр, яйцо</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/milk.jpg" alt="">
-                <div class="catalog__grid-title">Молоко, сыр, яйцо</div>
-              </div>
-            </div>
-            <div class="catalog__grid-item">
-              <div class="catalog__grid-card">
-                <img class="catalog__grid-img" src="img/meat.jpg" alt="">
-                <div class="catalog__grid-title">Мясо, птица, колбаса</div>
-              </div>
-            </div>
+          <div class="category">
+            
           </div>
         </div>
       </div>
