--- a/static-pages/index.html
+++ b/static-pages/index.html
@@ -31,7 +31,10 @@
         </symbol>
         <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 86 85" id="appgallery"><path fill-rule="evenodd" clip-rule="evenodd" d="M61.4 0H24.2C6.7 0 .3 6.4.3 23.9v37.2C.3 78.6 6.7 85 24.2 85h37.2c17.5 0 23.9-6.4 23.9-23.9V23.9C85.3 6.4 78.9 0 61.4 0z" fill="#C91430"></path><path d="M17.1 42.6h2.3v11.1h-2.3v-4.5H12v4.5H9.7V42.6H12v4.5h5.1v-4.5zm12.7 6.3c0 1.8-.9 2.8-2.5 2.8s-2.5-1-2.5-2.9v-6.3h-2.3v6.4c0 3.1 1.7 4.9 4.8 4.9 3.1 0 4.8-1.8 4.8-5v-6.3h-2.3v6.4zm26.1 1.3-2.5-7.6h-1.8l-2.5 7.6-2.5-7.6h-2.4l3.9 11.1H50l2.5-7.3 2.5 7.3h1.9l3.9-11.1h-2.3l-2.6 7.6zm8.8-1.3h4.1v-2h-4.1v-2.3h6v-2h-8.2v11.1h8.4v-2h-6.2v-2.8zm8.9 4.8h2.2V42.6h-2.2v11.1zm-37.1-2.3-1 2.3h-2.3l4.9-11.1h2L45 53.7h-2.4l-1-2.3h-5.1zm.8-2h3.4l-1.7-4-1.7 4zM42.8 28.4c-7.8 0-14.2-6.4-14.2-14.2h2c0 6.7 5.5 12.2 12.2 12.2 6.7 0 12.2-5.5 12.2-12.2h2c-.1 7.9-6.4 14.2-14.2 14.2z" fill="#fff"></path>
         </symbol>
-
+        <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 12" id="navigation"><rect width="16" height="2" rx=".5"></rect><rect x="3" y="5" width="13" height="2" rx=".5"></rect><rect x="3" y="10" width="13" height="2" rx=".5"></rect>
+        </symbol>
+        <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 12" id="navigation"><rect width="16" height="2" rx=".5"></rect><rect x="3" y="5" width="13" height="2" rx=".5"></rect><rect x="3" y="10" width="13" height="2" rx=".5"></rect>
+        </symbol>
       </svg>
     </div>
   
