added slider in detail pages

--- a/static-pages/detail.html
+++ b/static-pages/detail.html
@@ -185,7 +185,12 @@
                         </div>
                     </div>
                     <div class="card__buttons">
-                        <!-- <button class="btn card__btn card__btn--detail">В корзину</button> -->
+                        <button class="btn card__btn card__btn--detail" style="width: 220px;">
+                            <span>Добавить в корзину</span>
+                            <svg class="icon" style="padding-left: 4px; width:32px; ">
+                                <use xlink:href="#basket"></use>
+                            </svg>
+                        </button>
                         <button class="btn btn--control card__btn card__btn--detail">
                             <span class="btn__icon btn__icon--detail">
                                 <svg class="icon btn__control-icon">
